--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title glitch" data-text="抽象信用分模拟器">信用分查询</h1>
+        <h1 class="title glitch" data-text="信用分查询">信用分查询</h1>
         
         <div class="score-display" id="creditScore">-</div>
         
